# CRFtoy

./: LICENSE  Makefile  Makefile.am  Makefile.in  README.md  ReadMe.txt  config.h.in  configure  configure.ac  corpus.cpp  corpus.hpp  crf_classify.cpp  crf_learn.cpp  crf_test.cpp  crf_test.hpp  crf_test_main.cpp  crf_train.cpp  crf_train.hpp  crf_train_main.cpp  cube.cpp  cube.hpp  demo.sh  example.cpp  example.hpp  idmap.cpp  idmap.hpp  labelMap.cpp  labelmap.cpp  labelmap.hpp  labelmap0.hpp  matrix.cpp  matrix.hpp  model.cpp  model.hpp  param.cpp  param.hpp  resource.h  template.cpp  template.hpp
data/: classification  template_test  test_test.data  train.data  train_test.data
lib/: common.h  print.cpp  print.hpp  string_lib.cpp  string_lib.hpp
python/: prf.py
